--- a/snipped.css
+++ b/snipped.css
@@ -5839,6 +5839,7 @@ h2:after {
         color: rgb(209, 77, 29);
         font-weight: 600;
         line-height: 1;
+        font-size: 25px;
     }
 }
 
