--- a/snipped.css
+++ b/snipped.css
@@ -6140,4 +6140,64 @@ h2:after {
 }
 
 
+.btn-primary {
+    background: #fff;
+    color: hsl(0deg 0% 13%);
+    border-color: #d14d1d;
+    white-space: nowrap;
+    box-shadow: none;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Barlow Condensed, Arial, sans-serif, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-size: 17px;
+    text-transform: uppercase;
+    border: 2px solid #ebebeb;
+    font-weight: 600;
+    border-radius: 0;
+    padding: 10px 116px;
+    margin-left: 10px;
+    text-align: center;
+    text-shadow: none;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+}
+
+.btn.btn-primary.btn-one-style:active:focus {
+    box-shadow: 0 0 0 0.2rem #d14d1d8c;
+    color: #fff;
+    background-color: #d14d1d;
+    border-color: #d14d1d;
+}
+
+.btn.btn-primary.btn-one-style:focus {
+    box-shadow: 0 0 0 0.2rem #d14d1d8c;
+    color: #fff;
+    background-color: #d14d1d;
+    border-color: #d14d1d;
+}
+
+.btn-primary:not(:disabled):not(.disabled).active,
+.btn-primary:not(:disabled):not(.disabled):active,
+.show>.btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #d14d1d;
+    border-color: #d14d1d;
+    box-shadow: 0 0 0 0.2rem #d14d1d8c;
+}
+
+.btn-primary.focus {
+    color: #fff;
+    background-color: #d14d1d;
+    border-color: #d14d1d;
+    box-shadow: 0 0 0 0.2rem #d14d1d8c;
+}
+
+.btn-primary:focus {
+    color: #fff;
+    background-color: #d14d1d;
+    border-color: #d14d1d;
+    box-shadow: 0 0 0 0.2rem #d14d1d8c;
 }
