sidebar content styling

--- a/snipped.css
+++ b/snipped.css
@@ -6201,3 +6201,23 @@ h2:after {
     border-color: #d14d1d;
     box-shadow: 0 0 0 0.2rem #d14d1d8c;
 }
+
+#cartPanelId {
+    padding: 1%;
+    padding-right: 2em;
+    padding-left: 0;
+    padding-top: 15px;
+    border-top: 1px solid #ebebeb;
+    margin-bottom: 15px;
+    margin-left: 10px;
+}
+
+#i4nf2v {
+    margin-left: 10px;
+}
+h5#imsgk6 {
+    margin-left: 10px;
+}
+p#inr5v5 {
+    margin-left: 10px;
+}
